Bugzilla Bug 168226 XPCOM Wrapper does not support ldap port numbers greater than 32k, r=Pete Zha, sr=Henry Jia fixed by wind.li@sun.com checked in by Simford.Dong@Sun.COM